--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "type": "git",
     "url": "https://github.com/PraneeshRV/axec-cli"
   },
+  "homepage": "https://github.com/PraneeshRV/axec-cli#readme",
+"bugs": {
+  "url": "https://github.com/PraneeshRV/axec-cli/issues"
+},
   "dependencies": {
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
